--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -22,7 +22,7 @@ jobs:
         run: docker login -u $DOCKER_USER -p $DOCKER_PASS
       
       - name: Build
-        run: docker build -t stevekaufman/eshop-frontend .
+        run: cd frontend && docker build -t stevekaufman/eshop-frontend .
       
       - name: Push
         run: docker push stevekaufman/eshop-frontend
